--- a/src/scss/cardOpen.scss
+++ b/src/scss/cardOpen.scss
@@ -8,6 +8,12 @@
   overflow: scroll;
   top: 0;
   right: 0;
+  display: flex;
+  align-items: center;
+   @media (max-width: 500px) {
+    padding-top: 50px;
+    align-items: flex-start;
+   }
   .card.active {
     margin: 0;
     z-index: 20;
@@ -37,6 +43,9 @@
           background-size: cover;
           background-position: center -10%;
           background-repeat: no-repeat;
+          @media (max-width: 800px) {
+            box-shadow: 0 0 30px 30px  inset;
+           }
         }
         img.active {
           display: none;
@@ -69,29 +78,86 @@
     color: $white;
   }
 }
-// titolo nome
+
 .wrap-texts-in-prev.active {
   z-index: 30;
   width: 53vw;
   @include flex(column, space-between, center);
   display: block;
-  margin: 150px 0 0 33px;
+  margin: 0 0 0 33px;
   position: relative;
   color: $white;
+  gap: 10px;
+  @media (max-width: 800px) {
+   max-height: 70%;
+   margin: 0 0 0 3%;
+   width: 48%;
+  }
+
+
   .name-in-preview {
     text-align: center;
     margin: 10px 0;
+    @media (max-width: 800px) {
+      font-size: 1.7rem;
+      text-align: left;
+     }
+     @media (max-width: 600) {
+      font-size: 1.4rem;
+     }
+     @media (max-width: 470) {
+      font-size: 1.2rem;
+     }
   }
+
+  .original-lang.active {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 7px;
+  
+    span {
+      @media (max-width: 600px) {
+        display: inline-block;
+        width: 65px;
+      }
+    }
+  
+
+    img {
+      height: 15px;
+      width: unset;
+    }
+  }
+
+  p,
+  .stars.active,
+  .original-lang.active,
+  .add-to-favourites {
+    font-size: 1rem; 
+  }
+  
+  @media (max-width: 800px) {
+    p,
+    .stars.active,
+    .original-lang.active,
+    .add-to-favourites {
+      font-size: 0.8rem;
+    }
+  }
+
   .stars {
     color: $star;
   }
   .releaseDate {
     margin: 0;
     margin-bottom: 15px;
+    @media (max-width: 800px) {   
+      margin-bottom: 7px;
+    }
   }
   .flag {
     width: 30px;
-    margin-left: 10px;
   }
 
   button.btn.play {
@@ -103,9 +169,21 @@
     color: $titleOfGrupsCol;
     border: 4px solid $titleOfGrupsCol;
     border-radius: 50%;
+    @media (max-width: 800px) {
+      @include width-height(30px, 30px);
+      border: 2px solid $titleOfGrupsCol;
+      margin: 10px 0;
+
+      i.fa-play {
+        font-size: 0.7rem;
+      }
+    }
     &:hover {
       color: $white;
       border: 4px solid $white;
+      @media (max-width: 800px) {
+        border: 2px solid $white;
+      }
     }
     cursor: pointer;
     .fa-play {
